--- a/style.css
+++ b/style.css
@@ -250,3 +250,44 @@ box-shadow: inset 0px 0px 15px -7px #000000;
     bottom: 10px;
     left: 10px;
 }
+
+.pass-req {
+    position: relative;
+}
+
+.pass-req::after{
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    content: "\f059";
+    color: var(--gray-dark);
+    padding-left: 5px;
+
+}
+
+
+
+.pass-req::before{
+    font-family: var(--input-font);
+    content: "your password needs to have at least 8 characters, and contain an uppercase, a lowercase and a number character";
+    color: var(--gray-dark);
+    padding-left: 5px;
+    display: block;
+position: absolute;
+width: 200px;
+text-align: center;
+color: var(--gray-color);
+background-color: var(--gray-dark);
+border-radius: 5px;
+padding: 3px;
+bottom: 0;
+left: 60px;
+font-size: .75rem;
+transform: scale(0);
+transition: transform ease-out 150ms;
+transition: bottom ease-out 150ms;
+}
+
+.pass-req:hover::before {
+    transform: scale(1);
+    bottom: 100%;
+}
